# geopard

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  README.rst  geopard_example.py  geopard_example_start-finish_regions.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  gh-release.yml  github-release.yml  pytest.yml  python-publish.yml
data/csv_polygon_files/: example_finish_region.csv  example_start_region.csv
data/gpx_files/: green_marathon_activity_4_15_17.gpx  tds_sunnestube_activity_25_25.gpx
examples/: geopard_example.py  geopard_example_start-finish_regions.py  gpx_track_cropping_and_interpolation.py  start_end_region_polygon_usage.py  track_matching.py
geopard/: __init__.py  geopard.py  settings.py  version.py
gpx_files/: green_marathon_activity_4_15_17.gpx  green_marathon_segment.gpx  tds_sunnestube_activity_25_25.gpx  tds_sunnestube_segment.gpx
tests/: test_geometry_functions.py  test_geopard_sunnestube_segment.py  test_segment_results.py
tests/data/: example_gpx_track.gpx  example_polygon.csv
utils/: example_finish_region.csv  example_regions.py  example_start_region.csv  track_comparison.py
