[tool.poetry]
name = "geopard"
version = "0.2.3"
description = "Matching of gpx segments with dynamic time warping."
authors = ["danielvogler", "Sebastian de Castelberg"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "geopard" },
]

[tool.poetry.dependencies]
python = "^3.8"
gpxpy = "^1.5.0"
scipy = "^1.5.4"
Shapely = "^1.7.1"
numpy = "^1.11"
matplotlib = "^3.6.3"
pytest = "^7.4.3"
yamllint = "^1.32.0"
pylint = "^3.0.2"

[tool.black]
target-version = ["py39"]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__", "dist"]

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true

[tool.pylint]
max-line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
